--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ conf/
 jars/
 derby.log
 metastore_db/
+/.idea/.gitignore
+/.idea/aws-glue-libs.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
